# helix_agent

./: .gitignore  CHANGELOG.md  Phase-2-Api-Client.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
helix_agent/: __init__.py  __main__.py
helix_agent/api/: __init__.py  anthropic.py  base.py  client.py  error.py  factory.py  openai_compat.py  sse.py  types.py
helix_agent/cli/: __init__.py  main.py
helix_agent/commands/: __init__.py
helix_agent/runtime/: __init__.py  config.py  permissions.py  session.py  usage.py
helix_agent/tools/: __init__.py
tests/: conftest.py  test_api_client.py  test_api_errors.py  test_api_sse.py  test_api_types.py  test_integration.py  test_placeholder.py
